--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,25 @@
 
     <groupId>itiDesafio</groupId>
     <artifactId>itiDesafio</artifactId>
-    <version>1.0.0</version>
-
+    <version>1.0.1</version>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>8</source>
+                    <target>8</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+    <dependencies>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.6.7</version>
+        </dependency>
+    </dependencies>
 
 </project>
